testsuite/tests/rename/should_compile/T25991a_helper.hs
{-# LANGUAGE TypeFamilies #-}

module T25991a_helper (C(..)) where

class C a b where
  type a # b
  (#) :: a -> b -> ()
